# leptos_form

./: .gitignore  Cargo.toml
core/: Cargo.toml
core/src/: components.rs  lib.rs
core/src/form_component/: mod.rs
core/src/form_component/impls/: collections.rs  misc.rs  num.rs  str.rs
examples/tailwind/: Cargo.toml
examples/tailwind/src/: form.rs  main.rs
leptos_form/: Cargo.toml
proc_macros/core/: Cargo.toml
proc_macros/core/src/: form.rs
